<resources>
    <string name="app_name">DADM_21-22_parejaA_P1_info</string>
    <string name="question">Question</string>
    <string name="check">Check</string>
    <string name="correct">Very good!</string>
    <string name="incorrect">Incorrect...</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="prev">Previous</string>

    <!-- ESPAÑOL -->
    <string name="introducirNombre">Introduce tu nombre</string>
    <string name="string_resultados">RESULTADOS</string>
    <string name="string_numPreg">Número de preguntas</string>
    <string name="string_Volumen">Ajustar volumen</string>
    <string name="string_nivel">Escoge una dificultad</string>
    <string name="string_ajustes">AJUSTES</string>
    <string name="string_empezar">JUGAR</string>
    <string name="string_clasif">CLASIFICACIÓN</string>
    <string name="string_restart">RETOMAR TEST</string>
    <string name="string_volverMenu">VOLVER AL MENU</string>
    <string name="string_hint">Introduce tu nombre...</string>
    <string name="string_elect">Elija una categoría</string>


    <array name="test">
        <item>¿Cuál es el sueño de Luffy?;Encontrar a su padre;*Ser el Rey de los Piratas;Casarse
            con Nami;Comerse el jamón mas grande del mundo
        </item>
        <item>¿Cómo se llamaba el padre de Natsu?;Furiyama;Inferno;Nacho;*Igneel</item>
        <item>¿Cuál es el digimon de Tai?;*Agumon;Patamon;Kakamon;Palmon</item>
        <item>¿En qué escuela estudia Hinata Shoyo?;*Instituto Karasuno;Instituto Eleven;Instituto
            Kakugawa;Instituto Kaminari
        </item>
        <item>En el pendiente de Hawk aparece escrito...;Deadly Pork;*Star Boar;Fire Beast;Win Pig
        </item>
        <item>¿Cuál de estos personajes no es un Stardust Crusader?;Jotaro;Avdol;Polnareff;*Mista
        </item>
        <item>¿Por qué motivo Inuyasha es despreciado por su familia?;Por estar saliendo con
            Kagome;Por ser albino;*Por ser medio demonio;Por ser feo
        </item>
        <item>¿Cuál es el Quirk de Deku?;One for One;All for One;*One for All;All for All</item>
        <item>¿Cuántas bolas de dragon hay?;*Siete (7);Doce (12);Cinco (5);Seis (6)</item>
        <item>¿Cómo se llama el demonio que vive dentro de Yuuji
            Itadori?;Sakura;Sakuna;Sukura;*Sukuna
        </item>
        <item>¿Quién fue el primer beso de Naruto?;Sakura;*Sasuke;Hinata;Tsunade</item>
        <item>¿Cuál es el nombre real de Darkness?;Elizabeth;Sayaka;*Lalatina;María del Carmen
        </item>
        <item>¿Cuál de estos ninjas pertence a Konoha?;Zabuza;*Shikamaru;Temari;Hidan</item>
        <item>¿Cuál es el Escuadrón de Magos al que pertenece Asta?;*Toro Negro;Amanecer
            Dorado;Legión de Reconocimiento;León Carmesí
        </item>
        <item>¿Cuál de estos villanos pertenece al Frente de Liberación
            Paranormal?;Overhaul;Stain;Muscular;*Skeptic
        </item>
        <item>¿Cómo se llama el grupo de mercenarios de Griffith?;La Edad Dorada;Los Grifos del
            Oeste;*La Banda del Halcón;Los Hombres de Griffith
        </item>
        <item>¿Cuál es el nombre de villano de Shuichi Iguchi?;Mr Compress;*Spinner;Twice;Dabi
        </item>
        <item>¿Qué equipo de voleibol no tiene un animal como
            símbolo?;Karasuno;Shiratorizawa;Nekoma;*Aoba Josei
        </item>
        <item>¿Qué equipo no pertenece a Inazuma Eleven?;*New Team;Instituto Raimon;Royal
            Academy;Knights of Queen
        </item>
        <item>¿Cuál de estos Digimon pertenece a los Royal
            Knights?;Leonmon;Negamon;*Dynasmon;Angemon
        </item>
        <item>¿Cuál de estos personajes no representa a un Pecado
            Capital?;Meliodas;*Elizabeth;Escanor;Diane
        </item>
        <item>¿Cómo se llama este personaje?;Demon Slayer;Dragon Slayer;Monster Slayer;*Goblin
            Slayer
        </item>
        <item>¿Quién es este personaje de Hunter X Hunter?;*Leorio;Gon;Kurapika;Killua</item>
        <item>¿Cuál de estos personajes formó parte de los 5 Elementos?;Sebastian Rattengift;Dino
            Aquatro;*Alphonse Hangul;Sokar Was
        </item>
        <item>¿Cuál es el titán de la imágen?;Titán Acorazado de Reiner Braun;Titán de Ataque de
            Eren Kruger;*Titán de Ataque de Eren Jaeger;Titán Bestia de Zeke Jaeger
        </item>
        <item>¿Cómo se conoce a Kirito dentro de Sword Art Online?;El Duelista Oscuro;*El Espadachín
            Negro;El Caballero de la Noche;El Hacker Negro
        </item>
        <item>¿A qué personaje de The Promised Neverland pertence este
            número?;*Emma;Ray;Norman;Isabella
        </item>
        <item>¿Cuál es la técnica emblema del padre de Tanjiro?;Respiración del Agua;Respiración
            Animal;Respiración del Trueno;*Respiración Solar
        </item>
        <item>¿Quién es la identidad real detrás de ChainsawMan?;Aki;Kishibe;*Denji;Kobeni</item>
        <item>¿Cómo se llama este personaje de Promare?;Lio;*Galo;Galio;Leo</item>
        <item>¿De qué anime es este Opening?;Elfen Lied;Cowboy Bebop;*Neon Genesis
            Evangelion;Mazinger Z
        </item>
        <item>¿De qué anime es este Opening?;*My Hero Academia;Persona 5 The
            Animation;Gintama;Terraformars
        </item>
        <item>¿De qué anime es este Opening?;Berserk;Saint Seiya;*Attack on Titan;Kabaneri of the
            Iron Fortress
        </item>
        <item>¿De qué anime es este Opening?;Hunter X Hunter;*Black Clover;Assassination
            Classroom;Boruto
        </item>
        <item>¿De qué anime es este Opening?;Dr Stone;Saga of Tanya the Evil;Code Geass;*Tokyo
            Revengers
        </item>
        <item>¿De qué anime es este Opening?;Goblin Slayer;Nisemonogatari;*Kimetsu no Yaiba;Sword
            Art Online
        </item>
        <item>¿De qué anime es este Opening?;Horimiya;*Love is War;Golden Time;Hyouka</item>
        <item>¿De qué anime es este Opening?;To Love Ru;SSSS Gridman;Horimiya;*Darling in the
            FranXX
        </item>
        <item>¿Quién dice la siguiente frase?;*Kenshiro;Raoh;Jagi;Toki</item>
        <item>¿Quién dice la siguiente frase?;Jonathan Joestar;Jotaro Kujo;*Joseph Joestar;Josuke
            Higashikata
        </item>
        <item>¿Quién dice la siguiente frase?;*Meliodas;Goku;Koichi;Levi</item>
        <item>¿Quién dice la siguiente frase?;Boruto;*Naruto;Raruto;Kankuro</item>
        <item>¿Quién dice la siguiente frase?;Lelouch vi Britannia;Ryo Asuka;*Light Yagami;Sasuke
            Uchiha
        </item>
        <item>¿Quién dice la siguiente frase?;Natsuki Subaru;Shigaraki Tomura;Arthur Boyle;*Senku
            Ishigami
        </item>
        <item>¿Con qué edad empezó Rudeus a practicar magia?;*3 años;4 años;5 años;6 años</item>
        <item>¿Cómo se llama la expansión de dominio de Satoru Gojo?;Prisión Mahayana;Relicario
            Demoníaco;Contorno Sideral;*Vacío Ilimitado
        </item>
        <item>¿Por qué están mutilados los hermanos Elric?;Nacieron así;Por enfrentarse a Greed;*Por
            practicar alquimia humana;Por una enfermedad
        </item>
        <item>¿Cómo se llama el protagonista de Mob Psycho 100?;Mob;*Shigeo;Reigen;Ritsu</item>
        <item>¿Cuántas posturas de la Respiración del Trueno conoce Zenitsu?;Todas;*Una;Tres;La
            mitad
        </item>
        <item>¿Con qué técnica derrotó Saitama a Boros?;Tortazo Final;Guantazo Definitivo;*Puñetazo
            Serio;Derechazo Normal
        </item>
        <item>¿Qué evento lleva a Gohan a obtener el Super Saiyan 2?;*La muerte de C16;La derrota de
            su padre;La destrucción de Namek;La luna llena
        </item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_clasificacion">ClasificacionActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>