<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_menu_principal"
    tools:context=".ClasificacionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_clasificacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/kerokero"
            android:text="@string/string_clasif"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="65sp"
            tools:text="@string/string_clasif" />

        <TextView
            android:id="@+id/txt_elect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kerokero"
            android:text="@string/string_elect"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30dp"
            tools:text="@string/string_elect" />

        <RadioGroup
            android:id="@+id/radioGroup_clas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioBut_libre_clas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/kerokero"
                android:text="Libre"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioBut_facil_clas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/kerokero"
                android:text="Fácil"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioBut_medio_clas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/kerokero"
                android:text="Medio"
                android:textSize="20sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_blank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kerokero"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_rank1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kerokero"
                android:text="1 - NAME - PTS"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                tools:text="1 - NAME - PTS" />

            <TextView
                android:id="@+id/txt_rank2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kerokero"
                android:text="2 - NAME - PTS"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                tools:text="2 - NAME - PTS" />

            <TextView
                android:id="@+id/txt_rank3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kerokero"
                android:text="3 - NAME - PTS"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                tools:text="3 - NAME - PTS" />

            <TextView
                android:id="@+id/txt_rank4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kerokero"
                android:text="4 - NAME - PTS"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                tools:text="4 - NAME - PTS" />

            <TextView
                android:id="@+id/txt_rank5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kerokero"
                android:text="5 - NAME - PTS"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                tools:text="5 - NAME - PTS" />

            <Button
                android:id="@+id/btn_volverMenu_clas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:fontFamily="@font/kerokero"
                android:padding="10dp"
                android:text="@string/string_volverMenu"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:backgroundTint="@color/naranja"
                tools:text="@string/string_volverMenu" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>